--- a/tsconfig.module.json
+++ b/tsconfig.module.json
@@ -1,11 +1,11 @@
 {
-  "extends": "./tsconfig",
-  "compilerOptions": {
-    "target": "esnext",
-    "outDir": "build/module",
-    "module": "esnext"
-  },
-  "exclude": [
-    "node_modules/**"
-  ]
+	"extends": "./tsconfig",
+	"compilerOptions": {
+		"target": "esnext",
+		"outDir": "build/module",
+		"module": "esnext",
+		"declaration": true,
+		"inlineSourceMap": true
+	},
+	"exclude": ["node_modules/**"]
 }
