--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,24 +1,24 @@
-# This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
-# For more information see: https://help.github.com/actions/language-and-framework-guides/publishing-nodejs-packages
-
-name: Node.js Package
-
+name: Build and Publish on NPM
 on:
-    release:
-        types: [created]
-
+    push:
+        branches:
+            - main
 jobs:
-    build-test-publish:
-        runs-on: 'ubuntu-latest'
-
+    unit-tests:
+        runs-on: ubuntu-latest
         steps:
-            - uses: 'actions/checkout@v2'
+            - name: Checkout
+              uses: actions/checkout@v3
+            - uses: actions/setup-node@v3
               with:
-                  ref: '${{ github.event.release.target_commitish }}'
-            - name: 'Use Node.js 16'
-              uses: 'actions/setup-node@v1'
-            - run: 'yarn install'
-            - run: 'yarn build'
-            - run: 'npm publish --access public'
+                  node-version: 'v18.13.0'
+                  registry-url: 'https://registry.npmjs.org'
+            - name: Install and Build
+              run: |
+                  npm install
+                  npm run build
+            - name: Publish to NPM
               env:
-                  NODE_AUTH_TOKEN: '${{ secrets.npm_token }}'
+                  NPM_TOKEN: '${{ secrets.NPM_TOKEN }}'
+              run: |
+                  npm publish
