--- a/package.json
+++ b/package.json
@@ -1,53 +1,23 @@
 {
   "name": "ether-state",
-  "version": "0.0.5",
+  "version": "0.1.0",
   "description": "Library for syncing state from contracts.",
-  "main": "build/main/index.js",
-  "typings": "build/main/index.d.ts",
-  "module": "build/module/index.js",
-  "repository": "https://github.com/0xjimmy/ether-state",
+  "repository": "git@github.com:0xjimmy/ether-state.git",
+  "author": "James Galbraith <me@0xjimmy.xyz>",
   "license": "MIT",
-  "keywords": [],
   "scripts": {
-    "build": "run-p build:*",
-    "build:main": "tsc -p tsconfig.json",
-    "build:module": "tsc -p tsconfig.module.json",
-    "watch:build": "tsc -p tsconfig.json -w"
-  },
-  "engines": {
-    "node": ">=10"
+    "build": "tsc"
   },
   "dependencies": {
-    "ethers": "^5.6.8"
+    "ethers": "^5.7.2"
   },
   "devDependencies": {
-    "@ava/typescript": "^1.1.1",
-    "@istanbuljs/nyc-config-typescript": "^1.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.0.1",
-    "@typescript-eslint/parser": "^4.0.1",
-    "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^7.8.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-functional": "^3.0.2",
-    "eslint-plugin-import": "^2.22.0",
-    "npm-run-all": "^4.1.5",
-    "open-cli": "^6.0.1",
-    "standard-version": "^9.0.0",
-    "ts-node": "^9.0.0",
-    "typedoc": "^0.19.0",
-    "typescript": "^4.0.2"
+    "@types/node": "^18.11.18",
+    "typescript": "^4.9.4"
   },
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "files": [
-    "build/main",
-    "build/module",
-    "!**/*.spec.*",
-    "!**/*.json",
-    "CHANGELOG.md",
-    "LICENSE",
-    "README.md"
-  ],
-  "prettier": {
-    "singleQuote": true
-  }
+    "/dist"
+  ]
 }
