--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -14,7 +14,7 @@ jobs:
                   node-version: 'v18.13.0'
             - name: Build and publish
               env:
-                  NPM_TOKEN: '${{ secrets.NPM_TOKEN }}'
+                  NODE_AUTH_TOKEN: '${{ secrets.NPM_TOKEN }}'
               run: |
                   yarn
                   yarn build
