--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -12,6 +12,7 @@ jobs:
             - uses: actions/setup-node@v3
               with:
                   node-version: 'v18.13.0'
+                  registry-url: 'https://registry.npmjs.org'
             - name: Build and publish
               env:
                   NODE_AUTH_TOKEN: '${{ secrets.NPM_TOKEN }}'
