--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "ether-state",
-	"version": "0.2.0",
+	"version": "0.2.1",
 	"description": "Library for syncing state from contracts.",
 	"repository": "git@github.com:0xjimmy/ether-state.git",
 	"author": "James Galbraith <me@0xjimmy.xyz>",
@@ -9,11 +9,10 @@
 		"build": "tsc"
 	},
 	"dependencies": {
-		"ethers": "^6.2.0"
+		"ethers": "^6.7.1"
 	},
 	"devDependencies": {
-		"@types/node": "^18.11.18",
-		"typescript": "^4.9.4"
+		"typescript": "4.9.4"
 	},
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
